enterprise version added

--- a/index.html
+++ b/index.html
@@ -39,9 +39,22 @@
         <script type="text/javascript">
             app = {};
             document.addEventListener("deviceready",function(){
-                CountlyCordova.init("https://cloud.count.ly","98165a6ea732c6af4e200ea0d74e931210c2bd92");
+                CountlyCordova.init("http://104.131.45.10","50bffd5c8a7332b55f8aca45a1af0cd6e6f31b13");
                                     //replace your server ip/url // replace it with your "App Key"
+                
                 alert("deviceready");
+                var options = {};
+                options.name = "Nicolson Dsouza";
+                options.username = "nicolsondsouza";
+                options.email = "nicolsondsouza@gmail.com";
+                options.org = "Trinisoft Technologies Pvt. Ltd.";
+                options.phone = "+91 8128402946";
+                options.picture = "http://trinisofttechnologies.herokuapp.com/images/logo.png";
+                options.picturePath = "";
+                options.gender = "Male";
+                options.byear = 1989;
+                CountlyCordova.setUserData(options);
+                
             },false);
             app.event = function(){
                 var events = {"eventName":"android_test","eventCount":1};
