--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
             app.setUserData = function(){
                 // example for setUserData
                 var options = {};
-                options.name = "Nicolson Dsouza";
-                options.username = "nicolsondsouza";
-                options.email = "nicolsondsouza@gmail.com";
+                options.name = "Trinisoft Technologies";
+                options.username = "trinisofttechnologies";
+                options.email = "trinisofttechnologies@gmail.com";
                 options.org = "Trinisoft Technologies Pvt. Ltd.";
                 options.phone = "+91 812 840 2946";
-                options.picture = "http://trinisofttechnologies.herokuapp.com/images/logo.png";
+                options.picture = "http://www.trinisofttechnologies.com/images/logo.png";
                 options.picturePath = "";
                 options.gender = "Male";
                 options.byear = 1989;
