heaer center aligned

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </head>
     <body>
         <div class="app">
-            <h1>Countly Cordova Demo App</h1>
+            <h1 class="ui center aligned header">Countly Cordova Demo App</h1>
             <img class="ui centered medium image" src="./img/logo.png">
             <button onclick="app.start()" class="fluid ui green button">Start</button>
             <button onclick="app.stop()" class="fluid ui red button">Stop</button>
