--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.css" />
         <style type="text/css">
             button{
-              margin-top: 10px !important;
+              margin-top: 20px !important;
+              margin-bottom: 20px !important;
             }
         </style>
         <title>Countly Cordova Demo App</title>
