--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 Countly.userData.setProperty("keyName", "keyValue");
             }
             app.userData.increment = function(){
-                Countly.userData.increment("keyName", 5);
+                Countly.userData.increment("keyName");
             }
             app.userData.incrementBy = function(){
                 Countly.userData.incrementBy("keyName", 10);
