made messaging init method depricated

--- a/index.html
+++ b/index.html
@@ -167,10 +167,11 @@
                 // Countly.messagingMode.PRODUCTION
                 // Countly.mode = Countly.messagingMode.TEST;
                 // Countly.Push.onRegisterPushNotification();
-                Countly.initMessaging({
-                    "messageMode": Countly.messagingMode.TEST,
-                    "projectId": "881000050249"
-                });
+                // @depricated: The below commented method is depricated and no longer works.
+                // Countly.initMessaging({
+                //     "messageMode": Countly.messagingMode.TEST,
+                //     "projectId": "881000050249"
+                // });
 
                 // Tesint purpose only
                 Countly.onRegistrationId({
