--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 options.phone = "+91 812 840 2946";
                 options.picture = "http://www.trinisofttechnologies.com/images/logo.png";
                 options.picturePath = "";
-                options.gender = "Male";
+                options.gender = "M"; // "F"
                 options.byear = 1989;
                 Countly.setUserData(options);
             }
@@ -173,7 +173,7 @@
                 //     "projectId": "881000050249"
                 // });
 
-                // Tesint purpose only
+                // Tesing purpose only
                 Countly.onRegistrationId({
                     "registrationId":"abcdefg",
                     "mode":Countly.messagingMode.TEST,
