init Messaging is disabled

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             Countly.onRegistrationId({
                 "registrationId": data.registrationId,
                 "mode": Countly.messagingMode.TEST,
-                "projectId": "881000050249"
+                "projectId": "881000050249" // only for google / android
             })
 
             // data.registrationId
