--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="ui horizontal divider">Other Methods End</div>
     </div>
     <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="Countly.js"></script>
+    <script type="text/javascript" src="stacktrace.min.js"></script>
     <script type="text/javascript">
     // // testing purpose only
     // if(!window.device)
@@ -320,17 +320,50 @@
         },1000);
     }
     
+    // Use StackTrace to log all exceptions
+    if(window.StackTrace){
+        StackTrace.get().then(function(stackframes){
+            if(Countly.isCrashReportingEnabled){
+                Countly.logException(stackframes, true, {});
+            }
+        }).catch(function(err){});
+    }
+
+
     app.addCrashLog = function(){
+        Countly.enableCrashReporting();
         Countly.addCrashLog("User Performed Step A");
         setTimeout(function(){
             Countly.addCrashLog("User Performed Step B");
         },1000);
         setTimeout(function(){
             Countly.addCrashLog("User Performed Step C");
-            console.log("Opps found and error");
-            Countly.logException("My Customized error message");
+            // console.log("Opps found and error");
+            a();
         },1000);
+    }
 
+    function a (){
+        b();
+    }
+    function b(){
+        c();
+    }
+
+    function c(){
+        d();
+        throw new Error("My Custom Error");
+    }
+
+    function d(){
+        try{
+            throw new Error("My Second Error");
+        }catch(err){
+            StackTrace.fromError(err).then(function(stackframes){
+                Countly.logException(stackframes, true, {"my one": "value"});
+                // console.log(stackframes, nonfatal, segments);
+            });
+        }
     }
 
     // user details
