--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="ui horizontal divider">Other Methods End</div>
     </div>
     <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="stacktrace.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/stacktrace.js/2.0.0/stacktrace.min.js"> </script>
     <script type="text/javascript">
     // // testing purpose only
     // if(!window.device)
