fixed those changes

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     app = {};
 
     app.init = function() {
-        Countly.init("https://try.count.ly", "0e8a00e8c01395a0af8be0e55da05a404bb23c3e");
+        Countly.init("https://try.count.ly", "0e8a00e8c01395a0af8be0e55da05a404bb23c3e", "" +Math.random());
     };
     app.test = function() {
         app.onRegistrationId();
