--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         options.name = "Trinisoft Technologies";
         options.username = "trinisofttechnologies";
         options.email = "trinisofttechnologies@gmail.com";
-        options.org = "Trinisoft Technologies Pvt. Ltd.";
+        options.organization = "Trinisoft Technologies Pvt. Ltd.";
         options.phone = "+91 812 840 2946";
         options.picture = "http://www.trinisofttechnologies.com/images/logo.png";
         options.picturePath = "";
