--- a/index.html
+++ b/index.html
@@ -64,8 +64,11 @@
     app = {};
 
     app.init = function() {
-        Countly.init("https://try.count.ly", "0e8a00e8c01395a0af8be0e55da05a404bb23c3e", "" +Math.random());
+        Countly.init("https://try.count.ly", "0e8a00e8c01395a0af8be0e55da05a404bb23c3e", {
+            customDeviceId: "" + Math.random()
+        });
     };
+
     app.test = function() {
         app.onRegistrationId();
         app.sendSampleEvent();
